Added start / end time when adding task

--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -81,7 +81,7 @@
                                                 <button type="submit" class="add-box-btn">
                                                     <div class="add-box-content">
                                                         <span class="plus-icon">+</span>
-                                                        <span class="add-text">Add Subject</span>
+                                                        <span class="add-text">Add Task</span>
                                                     </div>
                                                 </button>
                                             </form>
