--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -16,6 +16,12 @@
                     {{ ['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday'][day] }}
                 </div>
                 
+                {% if error_message %}
+                <div class="error-message">
+                    {{ error_message }}
+                </div>
+                {% endif %}
+                
                 <form method="POST" action="{{ url_for('add_timetable') }}" class="subject-form">
                     <input type="hidden" name="day" value="{{ day }}">
                     
@@ -24,35 +30,35 @@
                             <label for="start_time">Start Time:</label>
                             <select name="start_time" id="start_time" required class="form-control">
                                 <option value="">-- Select Start Time --</option>
-                                <option value="8:00 AM">8:00 AM</option>
-                                <option value="8:30 AM">8:30 AM</option>
-                                <option value="9:00 AM">9:00 AM</option>
-                                <option value="9:30 AM">9:30 AM</option>
-                                <option value="10:00 AM">10:00 AM</option>
-                                <option value="10:30 AM">10:30 AM</option>
-                                <option value="11:00 AM">11:00 AM</option>
-                                <option value="11:30 AM">11:30 AM</option>
-                                <option value="12:00 PM">12:00 PM</option>
-                                <option value="12:30 PM">12:30 PM</option>
-                                <option value="1:00 PM">1:00 PM</option>
-                                <option value="1:30 PM">1:30 PM</option>
-                                <option value="2:00 PM">2:00 PM</option>
-                                <option value="2:30 PM">2:30 PM</option>
-                                <option value="3:00 PM">3:00 PM</option>
-                                <option value="3:30 PM">3:30 PM</option>
-                                <option value="4:00 PM">4:00 PM</option>
-                                <option value="4:30 PM">4:30 PM</option>
-                                <option value="5:00 PM">5:00 PM</option>
-                                <option value="5:30 PM">5:30 PM</option>
-                                <option value="6:00 PM">6:00 PM</option>
-                                <option value="6:30 PM">6:30 PM</option>
-                                <option value="7:00 PM">7:00 PM</option>
-                                <option value="7:30 PM">7:30 PM</option>
-                                <option value="8:00 PM">8:00 PM</option>
-                                <option value="8:30 PM">8:30 PM</option>
-                                <option value="9:00 PM">9:00 PM</option>
-                                <option value="9:30 PM">9:30 PM</option>
-                                <option value="10:00 PM">10:00 PM</option>
+                                <option value="8:00 AM" {% if start_time == "8:00 AM" %}selected{% endif %}>8:00 AM</option>
+                                <option value="8:30 AM" {% if start_time == "8:30 AM" %}selected{% endif %}>8:30 AM</option>
+                                <option value="9:00 AM" {% if start_time == "9:00 AM" %}selected{% endif %}>9:00 AM</option>
+                                <option value="9:30 AM" {% if start_time == "9:30 AM" %}selected{% endif %}>9:30 AM</option>
+                                <option value="10:00 AM" {% if start_time == "10:00 AM" %}selected{% endif %}>10:00 AM</option>
+                                <option value="10:30 AM" {% if start_time == "10:30 AM" %}selected{% endif %}>10:30 AM</option>
+                                <option value="11:00 AM" {% if start_time == "11:00 AM" %}selected{% endif %}>11:00 AM</option>
+                                <option value="11:30 AM" {% if start_time == "11:30 AM" %}selected{% endif %}>11:30 AM</option>
+                                <option value="12:00 PM" {% if start_time == "12:00 PM" %}selected{% endif %}>12:00 PM</option>
+                                <option value="12:30 PM" {% if start_time == "12:30 PM" %}selected{% endif %}>12:30 PM</option>
+                                <option value="1:00 PM" {% if start_time == "1:00 PM" %}selected{% endif %}>1:00 PM</option>
+                                <option value="1:30 PM" {% if start_time == "1:30 PM" %}selected{% endif %}>1:30 PM</option>
+                                <option value="2:00 PM" {% if start_time == "2:00 PM" %}selected{% endif %}>2:00 PM</option>
+                                <option value="2:30 PM" {% if start_time == "2:30 PM" %}selected{% endif %}>2:30 PM</option>
+                                <option value="3:00 PM" {% if start_time == "3:00 PM" %}selected{% endif %}>3:00 PM</option>
+                                <option value="3:30 PM" {% if start_time == "3:30 PM" %}selected{% endif %}>3:30 PM</option>
+                                <option value="4:00 PM" {% if start_time == "4:00 PM" %}selected{% endif %}>4:00 PM</option>
+                                <option value="4:30 PM" {% if start_time == "4:30 PM" %}selected{% endif %}>4:30 PM</option>
+                                <option value="5:00 PM" {% if start_time == "5:00 PM" %}selected{% endif %}>5:00 PM</option>
+                                <option value="5:30 PM" {% if start_time == "5:30 PM" %}selected{% endif %}>5:30 PM</option>
+                                <option value="6:00 PM" {% if start_time == "6:00 PM" %}selected{% endif %}>6:00 PM</option>
+                                <option value="6:30 PM" {% if start_time == "6:30 PM" %}selected{% endif %}>6:30 PM</option>
+                                <option value="7:00 PM" {% if start_time == "7:00 PM" %}selected{% endif %}>7:00 PM</option>
+                                <option value="7:30 PM" {% if start_time == "7:30 PM" %}selected{% endif %}>7:30 PM</option>
+                                <option value="8:00 PM" {% if start_time == "8:00 PM" %}selected{% endif %}>8:00 PM</option>
+                                <option value="8:30 PM" {% if start_time == "8:30 PM" %}selected{% endif %}>8:30 PM</option>
+                                <option value="9:00 PM" {% if start_time == "9:00 PM" %}selected{% endif %}>9:00 PM</option>
+                                <option value="9:30 PM" {% if start_time == "9:30 PM" %}selected{% endif %}>9:30 PM</option>
+                                <option value="10:00 PM" {% if start_time == "10:00 PM" %}selected{% endif %}>10:00 PM</option>
                             </select>
                         </div>
                         
@@ -60,35 +66,35 @@
                             <label for="end_time">End Time:</label>
                             <select name="end_time" id="end_time" required class="form-control">
                                 <option value="">-- Select End Time --</option>
-                                <option value="8:00 AM">8:00 AM</option>
-                                <option value="8:30 AM">8:30 AM</option>
-                                <option value="9:00 AM">9:00 AM</option>
-                                <option value="9:30 AM">9:30 AM</option>
-                                <option value="10:00 AM">10:00 AM</option>
-                                <option value="10:30 AM">10:30 AM</option>
-                                <option value="11:00 AM">11:00 AM</option>
-                                <option value="11:30 AM">11:30 AM</option>
-                                <option value="12:00 PM">12:00 PM</option>
-                                <option value="12:30 PM">12:30 PM</option>
-                                <option value="1:00 PM">1:00 PM</option>
-                                <option value="1:30 PM">1:30 PM</option>
-                                <option value="2:00 PM">2:00 PM</option>
-                                <option value="2:30 PM">2:30 PM</option>
-                                <option value="3:00 PM">3:00 PM</option>
-                                <option value="3:30 PM">3:30 PM</option>
-                                <option value="4:00 PM">4:00 PM</option>
-                                <option value="4:30 PM">4:30 PM</option>
-                                <option value="5:00 PM">5:00 PM</option>
-                                <option value="5:30 PM">5:30 PM</option>
-                                <option value="6:00 PM">6:00 PM</option>
-                                <option value="6:30 PM">6:30 PM</option>
-                                <option value="7:00 PM">7:00 PM</option>
-                                <option value="7:30 PM">7:30 PM</option>
-                                <option value="8:00 PM">8:00 PM</option>
-                                <option value="8:30 PM">8:30 PM</option>
-                                <option value="9:00 PM">9:00 PM</option>
-                                <option value="9:30 PM">9:30 PM</option>
-                                <option value="10:00 PM">10:00 PM</option>
+                                <option value="8:00 AM" {% if end_time == "8:00 AM" %}selected{% endif %}>8:00 AM</option>
+                                <option value="8:30 AM" {% if end_time == "8:30 AM" %}selected{% endif %}>8:30 AM</option>
+                                <option value="9:00 AM" {% if end_time == "9:00 AM" %}selected{% endif %}>9:00 AM</option>
+                                <option value="9:30 AM" {% if end_time == "9:30 AM" %}selected{% endif %}>9:30 AM</option>
+                                <option value="10:00 AM" {% if end_time == "10:00 AM" %}selected{% endif %}>10:00 AM</option>
+                                <option value="10:30 AM" {% if end_time == "10:30 AM" %}selected{% endif %}>10:30 AM</option>
+                                <option value="11:00 AM" {% if end_time == "11:00 AM" %}selected{% endif %}>11:00 AM</option>
+                                <option value="11:30 AM" {% if end_time == "11:30 AM" %}selected{% endif %}>11:30 AM</option>
+                                <option value="12:00 PM" {% if end_time == "12:00 PM" %}selected{% endif %}>12:00 PM</option>
+                                <option value="12:30 PM" {% if end_time == "12:30 PM" %}selected{% endif %}>12:30 PM</option>
+                                <option value="1:00 PM" {% if end_time == "1:00 PM" %}selected{% endif %}>1:00 PM</option>
+                                <option value="1:30 PM" {% if end_time == "1:30 PM" %}selected{% endif %}>1:30 PM</option>
+                                <option value="2:00 PM" {% if end_time == "2:00 PM" %}selected{% endif %}>2:00 PM</option>
+                                <option value="2:30 PM" {% if end_time == "2:30 PM" %}selected{% endif %}>2:30 PM</option>
+                                <option value="3:00 PM" {% if end_time == "3:00 PM" %}selected{% endif %}>3:00 PM</option>
+                                <option value="3:30 PM" {% if end_time == "3:30 PM" %}selected{% endif %}>3:30 PM</option>
+                                <option value="4:00 PM" {% if end_time == "4:00 PM" %}selected{% endif %}>4:00 PM</option>
+                                <option value="4:30 PM" {% if end_time == "4:30 PM" %}selected{% endif %}>4:30 PM</option>
+                                <option value="5:00 PM" {% if end_time == "5:00 PM" %}selected{% endif %}>5:00 PM</option>
+                                <option value="5:30 PM" {% if end_time == "5:30 PM" %}selected{% endif %}>5:30 PM</option>
+                                <option value="6:00 PM" {% if end_time == "6:00 PM" %}selected{% endif %}>6:00 PM</option>
+                                <option value="6:30 PM" {% if end_time == "6:30 PM" %}selected{% endif %}>6:30 PM</option>
+                                <option value="7:00 PM" {% if end_time == "7:00 PM" %}selected{% endif %}>7:00 PM</option>
+                                <option value="7:30 PM" {% if end_time == "7:30 PM" %}selected{% endif %}>7:30 PM</option>
+                                <option value="8:00 PM" {% if end_time == "8:00 PM" %}selected{% endif %}>8:00 PM</option>
+                                <option value="8:30 PM" {% if end_time == "8:30 PM" %}selected{% endif %}>8:30 PM</option>
+                                <option value="9:00 PM" {% if end_time == "9:00 PM" %}selected{% endif %}>9:00 PM</option>
+                                <option value="9:30 PM" {% if end_time == "9:30 PM" %}selected{% endif %}>9:30 PM</option>
+                                <option value="10:00 PM" {% if end_time == "10:00 PM" %}selected{% endif %}>10:00 PM</option>
                             </select>
                         </div>
                     </div>
@@ -98,11 +104,22 @@
                         <select name="subject_id" id="subject" required class="form-control">
                             <option value="">-- Choose a subject --</option>
                             {% for subject in subjects %}
-                            <option value="{{ subject.subject_id }}">
+                            <option value="{{ subject.subject_id }}" {% if subject_id == subject.subject_id %}selected{% endif %}>
                                  {{ subject.subject_name }} ({{ subject.subject_code }})
                             </option>
                             {% endfor %}
+                            <option value="custom" class="add-task-option">+ Add Custom Task</option>
                         </select>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="task_description">Task Description (Optional):</label>
+                        <input type="text" 
+                        id="task_description" 
+                        name="task_description" 
+                        class="form-control custom-task-input" 
+                        placeholder="Enter additional details (e.g., 'Chapter 5 Review', 'Group Project Meeting')"                            value="{{ task_description or '' }}">
+                        <small class="custom-task-hint">This will be displayed in the weekly summary</small>
                     </div>
                     
                     <div class="form-actions">
