--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <header class="header">
-        <div class="logo"><img src="trackademiclogo.png" alt="Logo"></div>
+        <div class="logo"><img src="trackademiclogo.jpg" alt="Logo"></div>
         <div class="dashboard-title">Dashboard</div>
         <div class="logout"><a href="{{ url_for('logout') }}">Logout</a></div>
     </header>
